<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="200dp">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/csmt" />

        <Spinner
            style="@style/ComboBox"
            android:layout_width="match_parent"
            android:id="@+id/SCSMT"
            android:spinnerMode="dialog"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gpu_name" />

        <Spinner
            style="@style/ComboBox"
            android:layout_width="match_parent"
            android:id="@+id/SGPUName"
            android:spinnerMode="dialog"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/video_memory_size" />

        <Spinner
            style="@style/ComboBox"
            android:layout_width="match_parent"
            android:id="@+id/SVideoMemorySize"
            android:entries="@array/video_memory_size_entries"
            android:spinnerMode="dialog"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strict_shader_math" />

        <Spinner
            style="@style/ComboBox"
            android:layout_width="match_parent"
            android:id="@+id/SStrictShaderMath"
            android:spinnerMode="dialog" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/offscreen_rendering_mode" />

        <Spinner
            style="@style/ComboBox"
            android:layout_width="match_parent"
            android:id="@+id/SOffscreenRenderingMode"
            android:spinnerMode="dialog" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Renderer" />

        <Spinner
            style="@style/ComboBox"
            android:layout_width="match_parent"
            android:id="@+id/SRenderer"
            android:spinnerMode="dialog" />

    </LinearLayout>
</ScrollView>